# Loom

./: .gitignore  ARCHITECTURE_AUDIT.md  CLAUDE.md  CORPUS_WIRING.md  DICTIONARY_SOURCES.md  GEMINI.md  LOOM_PLAYER_PLAN.md  MOBILE_ROADMAP.md  NETFLIX_RECON.md  PLATFORM_GATE_SURVEY.md  PLATFORM_RECON_PRIME_HBOMAX_ATV.md  PLAYER_RESUME.md  PUBLISH_PLAN.md  Procfile  README.md  ROADMAP.md  ROMANIZATION_CACHE.md  STORE_LISTING.md  VOCAB_LOOKUP.md  benchmark_memory.py  benchmark_optimized.py  diagnose.py  file_list.txt  fix_component.py  loom_app.py  package-lock.json  package.json  railway.json  requirements-web.txt  requirements.txt  srt_stitcher_app.py  streamlit_log.txt
app/: color_presets.py  language.py  memory_manager.py  mkv_handler.py  preview.py  processing.py  rasterize.py  romanize.py  state.py  style_defaults.py  styles.py  sub_utils.py  sup_writer.py  ui.py  user_settings.py
loom_api/: __init__.py  body_limit.py  client_version.py  corpus_export.py  corpus_forward.py  corpus_store.py  cors.py  db.py  deps.py  dictionary.py  jobs.py  limits.py  main.py  recycle.py  result_cache.py  storage.py  style_mapping.py  web.py
loom_core/: __init__.py  fonts.py  grammar.py  korean_rr.py  language.py  models.py  romanize.py  styles.py
scripts/: backfill_netflix_titles.py  build-libmpv.sh  diagnose_segmentation.py  dict_quality_check.py  export_corpus.py  fetch_noto_fonts.sh  ingest_dictionaries.py  inspect_corpus.py  requirements-export.txt  setup_bundle.sh
spike/mpv-render/: Cargo.toml  build.rs
spike/mpv-render/src/: main.rs  mpv_ffi.rs
tests/: conftest.py  (+32 more)
(+271 files in other folders)
